stuff being weird